# phase_only_orthonormalization

./: README.rst  pyproject.toml
experiment/: analyze_compare_wfs.py  analyze_compare_wfs_one_alg_per_loc.py  analyze_compare_wfs_two_alg_per_loc.py  batch_compare_wfs.py  batch_compare_wfs_one_alg_per_loc.py  batch_wfs_compare_wfs.py  experiment_helper_classes.py  experiment_helper_functions.py  export_thesis_back_cover.py  filters.py  sim_compare_wfs.py  sim_slm_video.py  slm_video.py
mode_optimization/: helper_functions.py  mode_functions.py  mode_optimization.py  mode_optimization_fourier.py  optimize_plane_wave_modes.py  optimize_polar_harmonic_modes.py  optimize_tilt_modes.py  optimize_tilt_modes_new.py  optimize_zernike_modes.py  tilt_optim_functions.py  zernike.py  zernike_pyramid.py
phase_only_orthonormalization/: directories.py  helper_functions.py  maximize_oklab.py  mode_functions.py  optimize_laguerre_gaussian_modes.py  optimize_plane_wave_modes.py  optimize_polar_harmonic_modes.py  optimize_zernike_modes.py  process_lg_modes.py  process_ortho_plane_waves.py  zernike_pyramid.py
tests/: test_helper_functions.py  test_mode_functions.py
