[tool.poetry]
name = "mode_optimization"
version = "0.2.0"
description = ""
authors = ["Daniel Cox <danielcox16@hotmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "~3.11"                # Currently restricted to be compatible with openwfs, also tied to torch cuda version
numpy = "^1.26.4"               # Currently restricted to be compatible with openwfs
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
gitpython = "^3.1.43"
h5py = "^3.11.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "~7.0.0"


[tool.poetry.group.default]
optional = true

[tool.poetry.group.default.dependencies]
torch = "^2.3.0"                # Platform default torch version = non-CUDA for Windows


[tool.poetry.group.cuda12]
optional = true

[tool.poetry.group.cuda12.dependencies]
torch = [
  {url = "http://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp311-cp311-linux_x86_64.whl#sha256=925e34af0905062a48b4f82d0e6656341ad4d626834a6a8245ef4eaee5375c98", markers = "sys_platform == 'linux'"},
  {url = "http://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp311-cp311-win_amd64.whl#sha256=5a578516d0caf233993b3161d7dce1472bb917c59dd767c51921cd6696c3f3f7", markers = "sys_platform == 'win32'"}
]


#[tool.poetry.group.cuda11]
#optional = true
#
#[tool.poetry.group.cuda11.dependencies]
#torch = [
#    {url = "http://download.pytorch.org/whl/cu118/torch-2.3.1%2Bcu118-cp311-cp311-linux_x86_64.whl#sha256=5b0d531814886573cbe8c8ca91d17676f96bbaa33b569dd37ea235f124314e97", markers = "sys_platform == 'linux'"},
#    {url = "http://download.pytorch.org/whl/cu118/torch-2.3.1%2Bcu118-cp311-cp311-win_amd64.whl#sha256=a697df4337d6f18a204b7603c06bec9c81ed393ceae71432c4a4e2902bc20270", markers = "sys_platform == 'win32'"}
#]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
