[tool.poetry]
name = "phase_only_orthonormalization"
version = "0.3.0"
description = ""
authors = ["Daniel Cox <danielcox16@hotmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "~3.11"                # Currently restricted to be compatible with openwfs, also tied to torch cuda version
numpy = "^1.26.4"               # Currently restricted to be compatible with openwfs
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
gitpython = "^3.1.43"
h5py = "^3.11.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "~7.0.0"


[tool.poetry.group.torchdefault]
optional = true

[tool.poetry.group.torchdefault.dependencies]
torch = "^2.4.0"                # Platform default torch version = non-CUDA for Windows


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
