[tool.poetry]
name = "phase_only_orthonormalization"
version = "0.4.0"
description = ""
authors = ["Daniel Cox <danielcox16@hotmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "~3.11"                # Currently restricted to be compatible with openwfs
numpy = "^1.26.4"               # Currently restricted to be compatible with openwfs
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
gitpython = "^3.1.43"
h5py = "^3.11.0"
scikit-image = "^0.24.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "~7.0.0"


[tool.poetry.group.torchdefault]
optional = true

[tool.poetry.group.torchdefault.dependencies]
torch = "~2.3.0"                # Platform default torch version = non-CUDA for Windows


[tool.poetry.group.experiment]
optional = true

[tool.poetry.group.experiment.dependencies]
openwfs = { git = "https://github.com/IvoVellekoop/openwfs", rev = "7727b33db0a48993d5aebb347233d82a25433729", extras = ["nidaq"] }
zaber-motion = "^5.2.1"
pyserial = "^3.5"
pyopengl = "^3.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
